Add duty cycle stats, update deps for java 21