@@ -1,15 +1,18 @@
 plugins {
     id "java"
-    id "maven"
     id "java-library-distribution"
-    id "me.champeau.gradle.jmh" version "0.5.0-rc-1"
+    id "me.champeau.jmh" version "0.7.3"
     id "maven-publish"
 }
 
 group = 'com.epam.cme'
-version = '2.1.5-MAHI20'
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+version = '2.1.5-MAHI21'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 repositories {
     mavenCentral()
@@ -20,27 +23,42 @@ jar {
 }
 
 dependencies {
-    compile project(':core')
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-    runtime group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.5'
-    compile group: 'net.openhft', name: 'koloboke-api-jdk8', version: '0.6.8'
-    runtime group: 'net.openhft', name: 'koloboke-impl-jdk8', version: '0.6.8'
-    compile group: 'net.openhft', name: 'chronicle-core', version: '1.7.6'
-    compile group: 'org.agrona', name: 'agrona', version: '0.9.5'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'uk.co.real-logic', name: 'sbe-tool', version: '1.6.0'
-    testCompile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    implementation project(':core')
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.1'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.18.0'
+    implementation group: 'net.openhft', name: 'koloboke-api-jdk8', version: '0.6.8'
+    implementation group: 'net.openhft', name: 'chronicle-core', version: '2.27ea8'
+    implementation group: 'org.agrona', name: 'agrona', version: '2.2.4'
+    implementation group: 'net.openhft', name: 'koloboke-impl-jdk8', version: '0.6.8'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+    testImplementation group: 'uk.co.real-logic', name: 'sbe-tool', version: '1.6.0'
+    testImplementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 }
 
 distributions {
     main {
-        baseName = 'b2bits-jmdp3'
+        distributionBaseName = 'b2bits-jmdp3'
         contents {
             from { '../dist' }
         }
     }
+}
+
+tasks.named('test', Test) {
+    // For general JVM flags
+    jvmArgs '--illegal-access=permit',
+            '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+            '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -50,14 +68,9 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 }
 
 artifacts {
-    archives sourcesJar    
+    archives sourcesJar
 }
 
-task copyToLib(type: Copy) {
-    into "$buildDir/libs/lib"
-    from configurations.runtime
-}
-build.dependsOn(copyToLib)
 
 task testJar(type: Jar) {
     archiveClassifier.set('tests')
